--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,6 +49,66 @@
     left: 50%;
 }
 
+.contact-form{ /* KN */
+	width: 90%;
+	max-height: 600px;
+	background: #ffd8f7;
+	position: absolute;
+	top: 66%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	padding: 30px, 40px;
+	box-sizing: border-box;
+	border-radius: 8px;
+	text-align: center;
+	box-shadow: 0 0 20px #000000b3;
+	font-family: "montserrat",serif;
+}
+
+.contact-form h1{ /* KN */
+	margin-top: 0;
+	font-weight: 200;
+}
+
+.txtb{ /* KN */
+	border: 1px solid gray;
+	margin: 8px 0;
+	padding: 12px 18px;
+	border-radius: 8px;
+}
+
+.txtb label{ /* KN */
+	display: block;
+	text-align: left;
+	color: #333;
+	text-transform: uppercase;
+	font-size: 14px;
+}
+
+.txtb input,.txtb textarea{ /* KN */
+	width: 100%;
+	border: none;
+	outline: none;
+	font-size: 18px;
+	margin-top: 6px;
+}
+
+.btn{ /* KN */
+	display: inline-block;
+	background: #E39DCB;
+	padding: 14px 0;
+	color: white;
+	text-transform: uppercase;
+	cursor: pointer;
+	margin-top: 8px;
+	width: 100%;
+	font-size: 22px;
+}
+
+.btn:hover{ /* KN */
+	color: #E3FA92;
+}
+
 .footer{
     text-align: center;
     
