--- a/stylesheet.css
+++ b/stylesheet.css
@@ -67,6 +67,7 @@
 
 }
 
+
 .row {
   display: flex;
 }
@@ -96,6 +97,32 @@ p {
 .text {
   font-family: "Raleway";
   float: right;
+}
+
+.button {
+  border: 2px solid black;
+  background-color: white;
+  color: black;
+  padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.read {
+  border-color: #ef67c4;
+  color: #000000;
+  background-color: #ffffff;
+  font: "Raleway";
+}
+
+.read:hover {
+  background-color: #ef67c4;
+  color: #000000;
+}
+
+a:link {
+  text-decoration: none;
+  font: "Raleway";
 }
 
 .contact-form{ /* KN */
