--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,11 @@
 
+body {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+
+}
 
 .nav {
 
@@ -186,10 +193,18 @@ a:link {
 }
 
 .footer{
-    text-align: center;
+    background: #ffffff;
+    margin-top: auto;
+    padding: 3em;
+	  width: 100%;
 
-	width: 100%;
+}
 
+.logo-footer {
 
+}
 
+.find-us {
+  text-align: center;
+  font: "Raleway";
 }
