--- a/stylesheet.css
+++ b/stylesheet.css
@@ -85,6 +85,12 @@ body {
   text-align: center;
 }
 
+h1 {
+  font-family: "Book Antigua";
+  text-align: center;
+  padding: 90px;
+}
+
 h2 {
   font-family: "Franklin Gothic Book";
   text-align: center;
