--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,73 +1,4 @@
 
-
-
-.nav {
-    
-    background-color: #fff;
-    list-style-type: none;
-    text-align: right;
-    margin: 0;
-    padding: 0;
-    
-}
-
-.nav li{
-    display: inline-block;
-    font-size: 20px;
-    padding: 45px;
-}
-
-.nav li a {
-    text-decoration: none;
-    color: black;
-}
-
-.nav li a:hover{
-    color: #FF004E;
-}
-
-
-.logo {
-    float: left;
-    max-width: 500px;
-    
-}
-
-.title {
-    position: absolute;
-    top: 50%;
-    left: 35%;
-}
-
-.button1 {
-    position:absolute;
-    top: 60%;
-    left: 45%;
-}
-
-.button2{
-    position: absolute;
-    top: 60%;
-    left: 50%;
-}
-
-h2 {
-    text-align: center;
-}
-
-.omos {
-    position: relative;
-}
-
-p {
-    text-align: inherit;
-}
-.footer{
-    text-align: center;
-    
-}
-=======
-
 /* CSS Document */
 
 *{   
@@ -216,12 +147,11 @@ background: #FFF167;
 	padding: 2px;
 	margin-top: 2100px;
 	margin-bottom: -60px;
-	color: #fff;
+	color: white;
 	background-color: #333;
 	text-align: center;
 	border-top: 3px solid #F4BEC1;
 }
-
 
 
 
