--- a/css/style.css
+++ b/css/style.css
@@ -40,23 +40,23 @@ ul{
 	list-style-type: none;
 	margin-top: 110px;
 }
-		
+
 ul li {
 	display: inline-block;
 }
-	
+
 ul li a {
 	text-decoration: none;
 	color: #000000;
 	padding: 5px 20px;
 	border: 1px solid #000000;
 	transition: 0.6s ease;
-	
+
 }
 ul li a:hover{
 	background-color: #D6D6D6;
 	color: #FFFFFF;
-	
+
 }
 
 ul li.active a{
@@ -72,7 +72,51 @@ ul li.active a{
 .main{
 	max-width: 1200px;
 	margin: auto;
-	
+
+}
+
+/*CONTENT*/
+
+.video {
+	padding-right: 330px;
+}
+
+.about {
+  color: black;
+  text-align: center;
+	padding: 0px;
+}
+
+.services {
+  color: black;
+  text-align: center;
+}
+
+* {
+  box-sizing: border-box;
+
+}
+
+.row {
+  display: flex;
+}
+
+.column {
+  flex: 33.33%;
+  padding: 60px;
+  text-align: center;
+}
+
+
+p {
+  font-family: "Raleway";
+  text-align: left;
+  padding-top: 40px;
+}
+
+.text {
+  font-family: "Raleway";
+  float: right;
 }
 
 /*--reservation--*/
@@ -128,7 +172,7 @@ h3.tittle.reserve {
     width: 50%;
     float: left;
 }
-.book-reservation label i{   
+.book-reservation label i{
     font-size: 1em;
     margin-right: 10px;
 	color: #D855DC;
@@ -162,7 +206,7 @@ h3.tittle.reserve {
 
 .bgg img{
 	background-image: url("../images/banner3.jpg");
-		
+
 		/* Full height */
 	width: 100%;
 
@@ -209,7 +253,7 @@ h3.tittle.reserve {
 }
 
 @media(max-width:1680px){
-	
+
 }
 @media(max-width:1440px){
 	.bg-agile {
@@ -220,7 +264,7 @@ h3.tittle.reserve {
 	}
 }
 @media(max-width:1366px){
-	
+
 }
 @media(max-width:1280px){
 	h1 {
@@ -256,7 +300,7 @@ h3.tittle.reserve {
 	}
 }
 @media(max-width:1050px){
-	
+
 }
 @media(max-width:1024px){
 	.book-reservation {
@@ -336,7 +380,7 @@ h3.tittle.reserve {
 	}
 }
 @media(max-width:640px){
-	
+
 }
 @media(max-width:600px){
 	.bg-agile {
@@ -411,10 +455,10 @@ h3.tittle.reserve {
 		font-size: 13px;
 		letter-spacing: 1px;
 	}
-	
+
 }
 @media(max-width:375px){
-	
+
 }
 @media(max-width:320px){
 	.book-reservation label {
