--- a/css/style.css
+++ b/css/style.css
@@ -40,23 +40,23 @@ ul{
 	list-style-type: none;
 	margin-top: 110px;
 }
-		
+
 ul li {
 	display: inline-block;
 }
-	
+
 ul li a {
 	text-decoration: none;
 	color: #000000;
 	padding: 5px 20px;
 	border: 1px solid #000000;
 	transition: 0.6s ease;
-	
+
 }
 ul li a:hover{
 	background-color: #D6D6D6;
 	color: #FFFFFF;
-	
+
 }
 
 ul li.active a{
@@ -72,7 +72,7 @@ ul li.active a{
 .main{
 	max-width: 1200px;
 	margin: auto;
-	
+
 }
 
 /*--reservation--*/
@@ -128,7 +128,7 @@ h3.tittle.reserve {
     width: 50%;
     float: left;
 }
-.book-reservation label i{   
+.book-reservation label i{
     font-size: 1em;
     margin-right: 10px;
 	color: #D855DC;
@@ -162,7 +162,7 @@ h3.tittle.reserve {
 
 .bgg img{
 	background-image: url("../images/banner3.jpg");
-		
+
 		/* Full height */
 	width: 100%;
 
@@ -209,7 +209,7 @@ h3.tittle.reserve {
 }
 
 @media(max-width:1680px){
-	
+
 }
 @media(max-width:1440px){
 	.bg-agile {
@@ -220,7 +220,7 @@ h3.tittle.reserve {
 	}
 }
 @media(max-width:1366px){
-	
+
 }
 @media(max-width:1280px){
 	h1 {
@@ -256,7 +256,7 @@ h3.tittle.reserve {
 	}
 }
 @media(max-width:1050px){
-	
+
 }
 @media(max-width:1024px){
 	.book-reservation {
@@ -336,7 +336,7 @@ h3.tittle.reserve {
 	}
 }
 @media(max-width:640px){
-	
+
 }
 @media(max-width:600px){
 	.bg-agile {
@@ -411,10 +411,10 @@ h3.tittle.reserve {
 		font-size: 13px;
 		letter-spacing: 1px;
 	}
-	
+
 }
 @media(max-width:375px){
-	
+
 }
 @media(max-width:320px){
 	.book-reservation label {
@@ -446,3 +446,63 @@ h3.tittle.reserve {
 	}
 }
 /*--//responsive-design--*/
+
+
+/*kontaktform Ice */
+.contact-form{
+	width: 85%;
+	max: 600px;
+	background: #fff;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	padding: 30px 40px;
+	box-sizing: border-box;
+	border-radius: 8px;
+	text-align: center;
+	box-shadow:  0 0 20px #000000b3;
+	font-family: "Montserrat", sans-serif;
+}
+
+.contact-form-text:hover{
+box-shadow: 0 0 10px 4px #000;
+}
+
+.contact-form h1{
+	margin-top: 0;
+	font-weight: 200;
+}
+.txtb{
+	border: 1px solid gray;
+	margin: 8px 0;
+	padding: 12px 18px;
+	border-radius: 8px;
+}
+
+
+.txtb label{
+display: block;
+text-align: left;
+color: #333;
+text-transform: uppercase;
+font-size: 14px;
+}
+.txtb input,.txtb textarea{
+width: 100%;
+border: none;
+background: none;
+outline: none;
+font size: 18px;
+margin-top: 6px;
+}
+.btn{
+display: inline-block;
+background: #5492c8;
+padding: 14px 0;
+color: white;
+text-transform: uppercase;
+cursor: pointer;
+margin-top: 8px;
+width: 100%;
+}
