--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body{
     -o-background-size: cover;
     -ms-background-size: cover;
     background-attachment: fixed;
-	background-color: #F4F4F4;
+	background-color: #FFFFFF;
 	width: 100%;
 	height: 100%;
 	margin: 0;
@@ -76,6 +76,40 @@ ul li.active a{
 }
 
 /*CONTENT*/
+
+.title {
+	position: absolute;
+	top: 35%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: #000;
+	font-size: 50px;
+}
+
+.button {
+	position: absolute;
+	top: 55%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.btn-video {
+	border: 1px solid #fff;
+	padding: 10px 30px;
+	color: #fff;
+	text-decoration: none;
+	transition: 0.6s ease;
+}
+
+.btn-video:hover {
+	background-color: #fff;
+	color: #000;
+}
+
+.background-img {
+	float: right;
+	background-size: cover;
+}
 
 .video {
 	padding-right: 330px;
