--- a/css/style.css
+++ b/css/style.css
@@ -497,9 +497,9 @@ h3.tittle.reserve {
 .contact-form{
 	width: 85%;
 	max: 600px;
-	background: #fff;
+	background: #ffffff;
 	position: absolute;
-	top: 50%;
+	top: 60%;
 	left: 50%;
 	transform: translate(-50%,-50%);
 	padding: 30px 40px;
@@ -517,6 +517,7 @@ box-shadow: 0 0 10px 4px #000;
 .contact-form h1{
 	margin-top: 0;
 	font-weight: 200;
+	color: #5492c8;
 }
 .txtb{
 	border: 1px solid gray;
@@ -550,4 +551,10 @@ text-transform: uppercase;
 cursor: pointer;
 margin-top: 8px;
 width: 100%;
+}
+
+.footer {
+margin: 0px auto;
+padding-bottom: 30px;
+width: 240px;
 }
