--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,8 @@ h1 {
 
 
 header{
-	background-image:url("ss.jpg");
-    height: 100vh;
+	background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url("background2.jpg");
+  height: 100vh;
 	background-size: cover;
 	background-position: center;
 }
@@ -76,6 +76,8 @@ ul li.active a{
 }
 
 /*CONTENT*/
+
+
 
 .title {
 	position: absolute;
@@ -128,6 +130,8 @@ ul li.active a{
 
 * {
   box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 
 }
 
