--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,6 @@ h1 {
 
 
 header{
-	background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url("background2.jpg");
   height: 100vh;
 	background-size: cover;
 	background-position: center;
@@ -529,6 +528,28 @@ h3.tittle.reserve {
 }
 /*--//responsive-design--*/
 
+/*Services Pernille & Ice*/
+div.gallery {
+  margin: 90px;
+  border: 1px solid #ccc;
+  float: left;
+  width: 300px;
+	color: #000;
+}
+
+div.gallery:hover {
+  border: 1px solid hotpink;
+}
+
+div.gallery img {
+  width: 100%;
+  height: auto;
+}
+
+div.desc {
+  padding: 30px;
+  text-align: center;
+}
 
 
 /*kontaktform Ice */
