--- a/css/stylebooking.css
+++ b/css/stylebooking.css
@@ -6,7 +6,7 @@ body{
     -o-background-size: cover;
     -ms-background-size: cover;
     background-attachment: fixed;
-	background-color: #848484;
+	background-color: #FFFFFF;
 	width: 100%;
 	height: 100%;
 	margin: 0;
@@ -187,12 +187,12 @@ h3.tittle.reserve {
 }
 .book-reservation input[type="text"],.book-reservation input[type="date"],.book-reservation input[type="time"],.book-reservation input[type="email"] {
     width: 89%;
-    color:#9a9797;
+    color:#FFFFFF;
     outline: none;
     font-size: 1em;
 	line-height: 25px;
     padding: 5px 10px;
-   border: 2px solid #fff;
+    border: 2px solid #fff;
     -webkit-appearance: none;
     margin-bottom: 1.5em;
 	font-family: 'Roboto', sans-serif;
@@ -206,7 +206,7 @@ h3.tittle.reserve {
 	line-height: 25px;
     border-radius: 0;
     background: none;
-    color: #9a9797;
+    color: #FFFFFF;
     border: 2px solid #fff;
     font-family: 'Roboto', sans-serif;
 }
@@ -236,16 +236,21 @@ h3.tittle.reserve {
     cursor: pointer;
     border: 2px solid #FFF5F5;
     outline: none;
-    background: #D673CC;
+	color: #FFFFFF;
+	background: #89738B;
     font-family: 'Roboto', serif;
 }
 .make input[type=submit]:hover {
-    background: none;
+    background: #B94CB4;
     transition: 0.5s all ease;
     -webkit-transition: 0.5s all ease;
     -moz-transition: 0.5s all ease;
     -o-transition: 0.5s all ease;
     -ms-transition: 0.5s all ease;
+}
+
+.make:hover{
+	color:
 }
 
 
