--- a/css/style.css
+++ b/css/style.css
@@ -46,14 +46,14 @@ ul li {
 
 ul li a {
 	text-decoration: none;
-	color: #000000;
+	color: #000;
 	padding: 5px 20px;
-	border: 1px solid #000000;
+	border: 1px solid #000;
 	transition: 0.6s ease;
 
 }
 ul li a:hover{
-	background-color: #D6D6D6;
+	background-color: #000;
 	color: #FFFFFF;
 
 }
@@ -82,22 +82,22 @@ ul li.active a{
 
 .button {
 	position: absolute;
-	top: 55%;
+	top: 70%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 }
 
 .btn-video {
-	border: 1px solid #fff;
+	border: 1px solid #000;
 	padding: 10px 30px;
-	color: #fff;
+	color: #000;
 	text-decoration: none;
 	transition: 0.6s ease;
 }
 
 .btn-video:hover {
-	background-color: #fff;
-	color: #000;
+	background-color: #000;
+	color: #fff;
 }
 
 .background-img {
@@ -651,79 +651,3 @@ width: 240px;
 }
 
 /*slideshow*/
-html, body{
-	width: 100%;
-	height: 100%;
-	padding: 0;
-	margin: 0px;
-}
-
-slider {
-	display: block;
-	width: 100%;
-	height: 100%;
-	background-color: #1f1f1f;
-	overflow: hidden;
-	position: absolute;
-
-}
-
-
-slider > * {
-	position: absolute;
-	display: block;
-	width: 100%;
-	height: 100%;
-	background: #1f1f1f;
-	animation: slide 12s infinite;
-	overflow: hidden;
-}
-
-slide:nth-child(1) {
-	left: 0%;
-	animation-delay: -1s;
-	background-image: url("ss.jpg");
-	background-size: cover;
-	background-position: center;
-}
-
-slide:nth-child(2) {
-	animation-delay: 2s;
-	background-image: url("dd.jpeg");
-	background-size: cover;
-	background-position: center;
-}
-
-slide:nth-child(3) {
-	animation-delay: 5s;
-	background-image: url(yy.jpeg);
-	background-size: cover;
-	background-position: center;
-}
-
-slide:nth-child(4) {
-	left: 0%;
-	animation-delay: 8s;
-	background-image: url("kk.jpeg");
-	background-size: cover;
-	background-position: center;
-}
-
-slide p {
-	font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif";
-	font-size: 70px;
-	text-align: center;
-	display: inline-block;
-	width: 100%;
-	margin-top: 340px;
-	color: #fff;
-}
-
-@keyframes slide {
-	0% {left: 100%; width: 100%;}
-	5% {left: 0%;}
-	25% {left: 0%;}
-	30% {left: -100%; width: 100%;}
-	30.0001% {left: -100%; width: 0%;}
-	100% {left: 100%; width: 0%;}
-}
