--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ ul li a {
 
 }
 ul li a:hover{
-	background-color: #000;
+	background-color: #5492c8;
 	color: #FFFFFF;
 
 }
@@ -88,15 +88,15 @@ ul li.active a{
 }
 
 .btn-video {
-	border: 1px solid #000;
+	border: 1px solid #fff;
 	padding: 10px 30px;
-	color: #000;
+	color: #fff;
 	text-decoration: none;
 	transition: 0.6s ease;
 }
 
 .btn-video:hover {
-	background-color: #000;
+	background-color: #5492c8;
 	color: #fff;
 }
 
@@ -651,3 +651,85 @@ width: 240px;
 }
 
 /*slideshow*/
+
+html, body{
+	width: 100%;
+	height: 100%;
+	padding: 0;
+	margin: 0px;
+}
+
+slider {
+	display: block;
+	width: 100%;
+	height: 100%;
+	background-color: #1f1f1f;
+	overflow: hidden;
+	position: absolute;
+	
+}
+
+
+slider > * {
+	position: absolute;
+	display: block;
+	width: 100%;
+	height: 100%;
+	background: #1f1f1f;
+	animation: slide 12s infinite;
+	overflow: hidden;
+}
+
+slide:nth-child(1) {
+	left: 0%;
+	animation-delay: -1s;
+	background-image: url("../images/bg.jpg");
+	
+	background-size: cover;
+	background-position: center;
+}
+
+slide:nth-child(2) {
+	animation-delay: 2s;
+	background-image: url("../images/tt.jpg");
+	background-size: cover;
+	background-position: center;
+}
+
+slide:nth-child(3) {
+	animation-delay: 5s;
+	background-image: url("../images/coffee.jpg");
+	background-size: cover;
+	background-position: center;
+}
+
+slide:nth-child(4) {
+	left: 0%;
+	animation-delay: 8s;
+	background-image: url("../images/kk.jpeg");
+	background-size: cover;
+	background-position: center;
+}
+
+slide p {
+	font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif";
+	font-size: 70px;
+	text-align: center;
+	display: inline-block;
+	width: 100%;
+	margin-top: 340px;
+	color: #fff;
+}
+
+@keyframes slide {
+	0% {left: 100%; width: 100%;}
+	5% {left: 0%;}
+	25% {left: 0%;}
+	30% {left: -100%; width: 100%;}
+	30.0001% {left: -100%; width: 0%;}
+	100% {left: 100%; width: 0%;}
+}
+
+
+
+
