--- a/css/stylebooking.css
+++ b/css/stylebooking.css
@@ -263,7 +263,29 @@ h3.tittle.reserve {
 
 .titletext h1{
 	font-family: Constantia, "Lucida Bright", "DejaVu Serif", Georgia, "serif";
-	color: #0C0A0A
+	color: #0C0A0A;
+}
+
+span {
+  content: "\2713";
+	font-size: 100px;
+	color: green;
+}
+
+.book1{
+	font-size: 50px;
+	text-align: center;
+}
+
+.book2{
+	text-align: center;
+	font-size: 20px;
+}
+
+.smiley{
+	font-size: 200px;
+	display: flex;
+  	justify-content: center;
 }
 
 @media(max-width:1680px){
