--- a/css/wickedpicker.css
+++ b/css/wickedpicker.css
@@ -7,15 +7,16 @@
 	background: #fefefe;
 	margin: 0 auto;
 	border-radius: 0.1px;
-	width: 318px;
-	height: 130px;
-	font-size: 14px;
-	display: none; }
+	width: 140px;
+	height: 150px;
+	font-size: 15px;
+	display: none;
+}
 .wickedpicker__title {
     /* background-image: -webkit-linear-gradient(top, #ffffff 0%, #f2f2f2 100%); */
     /* background-image: linear-gradient(to bottom, #ffffff 0%, #f2f2f2 100%); */
     position: relative;
-    background: #a71930;
+    background: #EF8183;
     margin: 0 auto;
     border-bottom: 1px solid #e5e5e5;
     padding: 12px 11px 10px 15px;
@@ -29,15 +30,17 @@
     -o-transform: translateY(-25%);
     transform: translateY(-25%);
     position: absolute;
-    top: 25%;
-    right: 5px;
-    color: #fefefe;
-    cursor: pointer; }
+    top: 10%;
+    right: 0px;
+    color: #7E0002;
+    cursor: pointer; 
+}
+
 .wickedpicker__close:before {
     content: '\e802'; 
 }
 .wickedpicker__controls {
-    padding: 10px 0;
+    padding: 15px 30px;
     line-height: normal;
     margin: 0; 
 }
